# library

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTONOMOUS_BACKLOG.md  CHANGELOG_NIGHT.md  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  README.en.md  README.md  SKIPPED.md  STATUS.md  STATUS_REALITY_CHECK.md  SUMMARY.md  learnings.md  pyproject.toml  setup-once.bat  start-all.bat  start-landing.bat  start-server.bat  start-tunnel.bat  start-ui.bat
.claude/: settings.json  statusline.sh
.claude/agents/: architect-deep.md  business-personas.md  code-reviewer.md  compliance-officer.md  consumer-personas.md  data-bd-personas.md  devil-advocate.md  expert-personas.md  explorer.md  growth-team-personas.md  implementer.md  kormarc-expert.md  legal-cs-personas.md  librarian-domain-classifier.md  librarian-reviewer.md  marketing-strategist.md  persona-simulator.md  planner.md  qa-validator.md  relations-ir-eth-personas.md  researcher.md  sales-specialist.md  security-personas.md  stakeholder-personas.md  tech-team-personas.md
.claude/commands/: add-isbn.md  batch-isbns.md  daily.md  generate-kormarc.md  golden.md  inspect.md  kdc-test.md  lint-fix.md  mobile-status.md  quality-check.md  report.md  search.md  serve.md  test-conversion.md  test.md  ui.md  vision-test.md
.claude/golden/: README.md
.claude/hooks/: irreversible-guard.sh  permission-denied-log.py  post-trust.py  postcompact-reinject.py  self-healing.sh  stop-double-gate.py
.claude/metrics/: trust.json
.claude/patterns/: adrAdded-35081b15.md  adrAdded-39e8c0b3.md  adrAdded-48bfd262.md  adrAdded-5b1b8f54.md  adrAdded-c6628004.md  agentAdded-48bfd262.md  agentAdded-5b1b8f54.md  assertionAdded-1a1dab20.md  assertionAdded-2b778aa8.md  assertionAdded-5b1b8f54.md  assertionAdded-7191cd58.md  assertionAdded-c6628004.md  assertionAdded-dcefa87b.md  assertionAdded-f3d34967.md  hookAdded-1a1dab20.md  hookAdded-dcefa87b.md  ruleAdded-5b1b8f54.md  ruleAdded-dcefa87b.md  testCreated-3b63a011.md  testCreated-501c39a5.md  testCreated-5c2f18ec.md  testCreated-61a57f1c.md  testCreated-62bf9de2.md  testCreated-76776b70.md  testCreated-7b0dbc10.md  testCreated-ef6d0aa3.md
.claude/rules/: autonomy-gates.md  business-impact-axes.md  kormarc-domain.md  personas-autonomy-policy.md
.github/workflows/: autonomous-6h.yml  ci.yml  release.yml
.streamlit/: auth_config.yaml.example
agent_docs/: CLAUDE-full-2026-05-03.md  kormarc_field_reference.md  release_process.md  running_evals.md
docs/: INDEX-legacy.md  adr-priority-matrix-2026-04-28.md  alphas-acquisition-audit.md  alphas-bookband-audit.md  alphas-registration-audit.md  alphas-section-8-9-audit.md  alphas-workflow-audit.md  api.md  b2b-vendor-guide.md  beta-interview-template.md  budget-cycle-matrix.md  business-checklist.md  business-evaluation-criteria-2026-04-28.md  business-impact-check-hook-design.md  central-institutions-deep-analysis.md  central-institutions-update-2026-04-28.md  chaekdanbi-workflow-audit.md  chaekeum-2021-audit.md  chaeknarae-2023-audit.md  cloud-routine-monitoring-guide.md  code-review.md  competitor-analysis.md  consortium-pitch.md  d-drive-acquisition-audit.md  d-drive-bookforest-audit.md  d-drive-final-completion-audit.md  d-drive-history-tools-audit.md  d-drive-mrc-validation-audit.md  d-drive-reading-rooms-audit.md  d-drive-xlsm-macros-audit.md  d-drive-yoondongju-thesis-audit.md  demo-checklist.md  dependency-business-hook-design.md  deploy.md  excel-integration.md  github-libraries.md  github-release-v0.4.37-guide.md  global-strategy.md  government-grants.md  government-policy-justification.md  (+71 more)
docs/academic/: kla-2026-poster-draft.md
docs/adr/: 0001-byok-anthropic-api-key.md  0002-cloudflare-tunnel-mobile.md  0003-per-record-pricing-100krw.md  0004-sqlite-deferred-mvp2.md  0005-self-hosting-vs-cloud.md  0006-claude-code-permissions-policy.md  0007-payment-gateway-portone.md  README.md  (+23 more)
examples/: batch_from_isbns.py  generate_from_isbn.py  generate_from_photo.py  sample_isbns.txt
landing/: demo.html  index.html  manifest.webmanifest  pricing.html
scripts/: accuracy_check.py  accuracy_compare.py  ace_loop.sh  aggregate_interviews.py  aggregate_revenue.py  analyze_real_acquisitions.py  anonymize_pii.py  auth_setup.py  backup_logs.py  binary_assertions.py  build_eval_corpus_v1.py  build_golden_dataset.py  eval_per_record_roundtrip.py  eval_real_disaggregation.py  extract_patterns.py  golden_check.py  pilot_collect.py  prompt_cache_helper.py  rotate_logs.py  sales_funnel.py  trust_report.py  validate_real_mrc.py  visual_regression.py
tests/: conftest_vcr.py  test_aggregate_interviews.py  test_aggregate_interviews_persona.py  test_aggregate_revenue.py  test_aggregator_budgaeho_fallback.py  test_annual_statistics.py  test_anthropic_client.py  test_application_level.py  test_audit_store.py  test_authority_data.py  test_billing.py  test_billing_onboarding.py  test_budgaeho_decoder.py  test_builder_auto_validate.py  test_builder_phase15_integration.py  test_chaekdanbi_auto_label.py  test_cold_mail_engine.py  test_confidence_categories.py  test_copy_cataloging.py  test_deposit.py  test_deposit_form.py  test_deterministic.py  test_disposal_form.py  test_field_status.py  test_final_polish_modules.py  test_funnel_analytics.py  test_handover_manual.py  test_interlibrary.py  test_inventory_inspection.py  test_isbn.py  test_kdc.py  test_kdc_waterfall.py  test_kolas3_countdown.py  test_kormarc_material_types_phase15.py  test_kormarc_material_types_phase15_complete.py  test_kormarc_specialized.py  test_librarian_friendly.py  test_librarian_helpers.py  test_m5_tenant_slo.py  test_macro_kolas_migration.py  (+52 more)
(+380 files in other folders)
