[project]
name = "kormarc-auto"
version = "0.6.0"
description = "한국 도서관용 KORMARC 자동 생성 도구 — ISBN/사진 입력으로 KOLAS·DLS 호환 .mrc 출력"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "okwhr", email = "okwhrlgma@gmail.com" }]

dependencies = [
  "pymarc>=5.3",
  "requests>=2.32",
  "anthropic>=0.40",
  "pyzbar>=0.1.9",
  "Pillow>=10.4",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0",
  "hanja>=0.15",
  "opencv-python>=4.10",
  "diskcache>=5.6",      # API 응답 30일 캐시 (비용 절감)
  "tenacity>=9.0",       # 재시도 데코레이터
  "rich>=13.9",          # CLI 출력 색상·표·진행률
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "openpyxl>=3.1",  # xlsm/xlsx 매크로 파서 테스트
  "hypothesis>=6.150",  # B안 P3 — property-based tests (round-trip·idempotence·invariants)
]
ui = [
  "streamlit>=1.39",
  "streamlit-authenticator==0.4.2",  # ADR 0011·DECISIONS 6dim+7 — PO 인증 (Part G Step 2)
  "bcrypt==4.3.0",                   # streamlit-authenticator 강제 핀 (PO 마스터 부록 A)
  "PyYAML>=6.0,<7",                  # auth_config.yaml 파서 (hanja 0.15.1 = pyyaml==6.0.1 정합)
]
ocr = [
  "easyocr>=1.7",  # AI 없이 한국어 OCR (바코드 실패 시 폴백)
]
labels = [
  "reportlab>=4.0",       # 청구기호·바코드 PDF 라벨 (A4 Avery)
  "python-barcode>=0.15", # Code128/EAN-13 바코드 이미지
]

[project.scripts]
# uv tool install kormarc-auto = 2026 default (Part 92 §A.2)
# 모든 .bat 파일 대체 (start-all·setup-once·start-ui·start-server·start-tunnel)
kormarc-auto = "kormarc_auto.cli:main"
kormarc-server = "kormarc_auto.server.app:run"
kormarc-ui = "kormarc_auto.ui.streamlit_app:run"
# T2-2 신규 = console_scripts 통합·.bat 대체
ka = "kormarc_auto.cli:main"  # short alias·사서 5분 도입

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kormarc_auto"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003 = ambiguous unicode (한국어 코드베이스 = × · α · ℹ 등 정상 사용)
# RUF009 = dataclass field default_factory 권장이나 date.today() 의도적 사용
ignore = ["E501", "RUF001", "RUF002", "RUF003", "RUF009"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
